2014-09-03  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (getaclentry): Fix previous fix again.  Allow lone 'm' as
	well as any lone default entry if action is Delete.  Fix comments.
	(usage): Align usage text.

2014-09-03  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (getaclentry): Fix return value in case of a lone 'm' if
	action is Delete.  Drop requirement for a trailing colon if action is
	Delete.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (usage): Drop outdated note that default ACEs are not
	taken into account.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* getfacl.c (usage): Add flags description.
	(main): Print suid/sgid/vtx flags if available.

2014-08-15  Corinna Vinschen  <corinna@vinschen.de>

	* configure.ac: Convert to new AC_INIT style.
	* configure: Regenerate.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml: Move to ../doc.

2014-08-06  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.c (usage): Rename DAYS to MINDAYS and MAXDAYS.
	* utils.xml (passwd): Ditto.

2014-07-29  Corinna Vinschen  <corinna@vinschen.de>

	* mkgroup.c (usage): Move info message that this /etc/group isn't really
	required anymore more to the top of the usage output.
	* mkpasswd.c (usage): Ditto for /etc/passwd.  Drop old text from output.
	* utils.xml: Fix accordingly.

2014-06-16  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.c (main): Fix typo in error output.

2014-04-21  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* minidumper.cc (filter_minidump_type): New function.
	(minidump): Change default dump type from MiniDumpNormal to
	something with more useful information without getting too
	big. Use filter_minidump_type() to filter out unsupported dump
	types.

2014-04-21  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* Makefile.in (minidumper.exe): Link directly with dbghelp.
	* minidumper.cc (minidump): Ditto.

2014-04-21  Jon TURNEY  <jon.turney@dronecode.org.uk>
